--- a/assets/pages/leaderboard/leaderboard.html
+++ b/assets/pages/leaderboard/leaderboard.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <div class="container">
-    <div id="highScores" class="flex-center flex-column">
+    <div id="leaderboard" class="flex-center flex-column">
       <h1 id="finalScore">Leaderboard</h1>
-      <ul id="highScoresList"></ul>
+      <ul id="leaderboardList"></ul>
       <a href="../../../index.html" class="btn">Go Home</a>
     </div>
   </div>
