--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div id="home" class="flex-column flex-center">
       <h1>Coding Quiz Challenge</h1>
       <h2>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</h2>
-      <div id="buttons">
-        <button class="play button"><a href="../code-quiz/assets/pages/quiz/quiz.html">Play</a></button>
-        <button class="leaderboard"><a href="../code-quiz/assets/pages/leaderboard/leaderboard.html">Leaderboard<i class="fas fa-crown"></i></a></button>
+      <div id="#buttons">
+        <a href="../code-quiz/pages/quiz.html" class="btn">Play</a>
+        <a href="../code-quiz/pages/leaderboard.html" class="btn">Leaderboard<i class="fas fa-crown"></i></a>
       </div>
     </div>
   </div>
