--- a/pages/leaderboard.html
+++ b/pages/leaderboard.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="leaderboard.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/leaderboard.css">
 
 </head>
 <body>
@@ -14,9 +14,9 @@
     <div id="leaderboard" class="flex-center flex-column">
       <h1 id="finalScore">Leaderboard</h1>
       <ul id="leaderboardList"></ul>
-      <a href="../../../index.html" class="btn">Go Home</a>
+      <a href="../index.html" class="btn">Go Home</a>
     </div>
   </div>
-  <script src="../leaderboard.js"></script>
+  <script src=""></script>
 </body>
 </html>
