--- a/pages/end.html
+++ b/pages/end.html
@@ -12,16 +12,16 @@
 </head>
 <body>
   <div class="container">
-    <div id="end" class="flex-center flex-column">
-        <h1 id="finalScore">Your Final Score:</h1>
-        <form class="end-form-container">
-          <h2 id="end-text">Enter your name below to save your score!</h2>
-          <input type="text" name="name" id="username" placeholder="Enter your name:"></input>
-        </form>
-        <a class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</a>
-        <a href="../pages/quiz.html" class="btn">Play Again</a>
-        <a href="../index.html" class="btn">Go Home</a>
-    </div>
+      <div id="end" class="flex-center flex-column">
+          <h1 id="finalScore">0</h1>
+          <form class="end-form-container">
+              <h2 id="end-text">Enter your name below to save your score!</h2>
+              <input type="text" name="name" id="username" placeholder="Enter your name">
+          <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
+          </form>
+          <a href="../pages/quiz.html" class="btn"> Play Again</a>
+          <a href="../index.html" class="btn"> Go Home</a>
+      </div>
   </div>
   <script src="../assets/js/end.js"></script>
 </body>
