--- a/pages/highscores.html
+++ b/pages/highscores.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/leaderboard.css">
+    <link rel="stylesheet" href="../assets/css/highscores.css">
 
 </head>
 <body>
   <div class="container">
-    <div id="leaderboard" class="flex-center flex-column">
-      <h1 id="finalScore">Leaderboard</h1>
-      <ul id="leaderboardList"></ul>
+    <div id="highScores" class="flex-center flex-column">
+      <h1 id="finalScore">High Scores</h1>
+      <ul id="highScoresList"></ul>
       <a href="../index.html" class="btn">Go Home</a>
     </div>
   </div>
-  <script src=""></script>
+  <script src="../assets/js/highscores.js"></script>
 </body>
 </html>
