updated readme and quiz questions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div id="home" class="flex-column flex-center">
-      <h1>Coding Quiz Challenge</h1>
+      <h1>Aviation Timed Quiz Challenge</h1>
       <h2>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</h2>
       <div id="buttons">
         <a href="../code-quiz/pages/quiz.html" class="btn">Play</a>
